# ml-energy-disaggregation

./: .coveragerc  .gitattributes  .gitignore  .gitkeep  .nojekyll  .pre-commit-config.yaml  PLAN.md  README.md  _quarto.yml  about.html  about.qmd  acronyms.html  acronyms.qmd  acronyms.yml  book-restructuring-plan-nine-parts.md  cliff.toml  how-to-use.html  how-to-use.qmd  index.html  index.qmd  preface.html  preface.qmd  pyproject.toml  references.bib  robots.txt  search.json  sitemap.xml
.github/workflows/: check-notebooks.yml  check-qmd.yml  check_pullrequest.yaml  publish-book.yml
ark/: __init__.py
ark/anomaly/: conformal.py  detectors.py  features.py
ark/cluster/: cluster_validation.py  datasets.py  dimensionality.py  feature.py  idec.py  preprocessing.py  processing.py  stability.py
ark/dss/: circuit.py  mitigation.py  results.py  violations.py
ark/evaluate/: ranking.py
ark/plot/: basic_plots.py  clustering.py  diagrams.py  gt_style.py  icons.py  matplot_theme.py  theme.py  tokens.py
ark/recommend/: ranking.py  retrieval.py
book/02-disaggregation/: 01-what-is-nilm-code.ipynb  01-what-is-nilm.html  01-what-is-nilm.qmd  02-feature-engineering-code.ipynb  02-feature-engineering.html  02-feature-engineering.qmd  03-multi-appliance-recognition-code.ipynb  03-multi-appliance-recognition.html  03-multi-appliance-recognition.qmd  04-multi-task-low-frequency-code.ipynb  04-multi-task-low-frequency.html  04-multi-task-low-frequency.qmd
book/03-disaggregation/: 01-what-is-nilm.html  02-feature-engineering.html  03-multi-appliance-recognition-code.ipynb  03-multi-appliance-recognition.html  04-multi-task-low-frequency-code.ipynb  04-multi-task-low-frequency.html  04-multi-task-low-frequency.qmd
book/03-forecasting/: 01-forecastability-code.ipynb
book/04-grid-edge/: 01-opendss-lv-modeling-code.ipynb  01-opendss-lv-modeling.html  01-opendss-lv-modeling.qmd  02-timeseries-der-modeling-code.ipynb  02-timeseries-der-modeling.html  02-timeseries-der-modeling.qmd  03-phase-identification-code.ipynb  03-phase-identification.html  03-phase-identification.qmd  04-customer-feeder-clustering-code.ipynb  04-customer-feeder-clustering-goiener-chronos-embed-code.ipynb  04-customer-feeder-clustering-goiener-code.ipynb  04-customer-feeder-clustering-goiener-crocs-code.ipynb  04-customer-feeder-clustering-goiener-diffusion-code.ipynb  04-customer-feeder-clustering-goiener-multires-code.ipynb  04-customer-feeder-clustering-goiener-tucker-code.ipynb  04-customer-feeder-clustering-london-code.ipynb  04-customer-feeder-clustering.html  04-customer-feeder-clustering.qmd  05-ranking-recommendation-code.ipynb  05-ranking-recommendation.html  05-ranking-recommendation.qmd  06-anomaly-detection-code.ipynb  06-anomaly-detection.html  06-anomaly-detection.qmd
book/04-network-foundations/: 01-opendss-lv-modeling-code.ipynb  01-opendss-lv-modeling.html  01-opendss-lv-modeling.qmd  02-timeseries-der-modeling-code.ipynb  (+5 more)
book/_quarto/: brand.scss  (+1 more)
scripts/: check_qmd_codeblocks.sh  check_qmd_emdash.sh  explore_goiener_data.py  explore_london_lcl_data.py  explore_norway_ev_data.py  explore_uk_pv_data.py  fetch_goiener_data.py  fetch_london_lcl_data.py  fetch_norway_ev_data.py  fetch_part3_mendeley_data.py  fetch_part4_ausnet_data.py  fetch_part4_ev_profiles.py  fetch_part4_smartds_data.py  fetch_part4_uk_mvlv_data.py  fetch_part5_nrel_buildstock_data.py  fetch_uk_pv_data.py
(+109 files in other folders)
